// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "justifyContent": "space-between",
      "marginHorizontal": 10,
      "paddingBottom": 70,
      "paddingTop": 10,
    }
  }
>
  <View>
    <Image
      style={
        Object {
          "alignSelf": "center",
          "height": 270,
          "marginVertical": 20,
          "width": 240,
        }
      }
    />
    <Text
      style={
        Object {
          "alignSelf": "center",
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 26,
          "marginBottom": 10,
          "marginHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      Something's gone wrong
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 15,
          "marginHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      We can't load the page you have requested. Please check your network connection and retry to continue
    </Text>
  </View>
  <Button />
</View>
`;

exports[`2. a full article with an image as the lead asset 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <ModalImage />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": -13.75,
              "marginTop": 10,
            }
          }
        >
          <ArticleLabel />
        </View>
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Regular",
              "fontSize": 20,
              "lineHeight": 25,
              "paddingBottom": 10,
            }
          }
        >
          Some Standfirst
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginBottom": 10,
              "paddingTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "marginRight": 15,
              }
            }
          >
            <NewArticleFlag />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            <ArticleBylineWithLinks />
          </Text>
        </View>
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <Text
        style={
          Object {
            "color": "#006699",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 17,
            "lineHeight": 26,
            "marginBottom": 25,
            "marginTop": 0,
            "textDecorationLine": "underline",
          }
        }
      >
        Some Link
      </Text>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View>
      <View>
        <PullQuote />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": "100%",
          }
        }
      >
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginLeft": 10,
            "marginRight": 10,
          }
        }
      >
        <ArticleTopics />
      </View>
    </View>
    <View>
      <RelatedArticles />
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`2. an empty article 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
            "marginLeft": 10,
            "marginRight": 10,
            "marginTop": 5,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FF0000",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 12,
              "fontWeight": "400",
              "letterSpacing": 1.2,
              "marginBottom": 20,
            }
          }
        >
          NEW BREXIT REFERENDUM
        </Text>
        <View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginBottom": 20,
                "paddingLeft": 1,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FF0000",
                  "height": 8,
                  "top": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 16,
                  "lineHeight": 27,
                  "marginTop": -8,
                  "paddingLeft": 15,
                  "width": "95%",
                }
              }
            >
              Another ministerial aide, 
              <Text
                style={
                  Object {
                    "color": "#006699",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Robert Courts
              </Text>
              , resigned saying that he could not look himself in the mirror if he backed the Chequers proposals.
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginBottom": 20,
                "paddingLeft": 1,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FF0000",
                  "height": 8,
                  "top": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 16,
                  "lineHeight": 27,
                  "marginTop": -8,
                  "paddingLeft": 15,
                  "width": "95%",
                }
              }
            >
              Downing Street and Conservative Party bosses were seeking to assess the scale of a grassroots rebellion.
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginBottom": 20,
                "paddingLeft": 1,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FF0000",
                  "height": 8,
                  "top": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 16,
                  "lineHeight": 27,
                  "marginTop": -8,
                  "paddingLeft": 15,
                  "width": "95%",
                }
              }
            >
              Dennis Mitchell’s high levels of testosterone in 1998 were caused by having sex with his wife "at least four times" on her birthday, according to the sprinter. USA Track and Field believed him, the IAAF did not
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginBottom": 20,
                "paddingLeft": 1,
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FF0000",
                  "height": 8,
                  "top": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
            <Text
              style={
                Object {
                  "color": "#333333",
                  "fontFamily": "TimesDigitalW04",
                  "fontSize": 16,
                  "lineHeight": 27,
                  "marginTop": -8,
                  "paddingLeft": 15,
                  "width": "95%",
                }
              }
            >
              Chuka Umunna, leader of the 
              <Text
                style={
                  Object {
                    "fontStyle": "italic",
                  }
                }
              >
                Labour Remainers
              </Text>
              , dismissed Mrs May’s 
              <Text
                style={
                  Object {
                    "fontWeight": "bold",
                  }
                }
              >
                compromise
              </Text>
               as “anti-worker and anti-business” and said that it would “royally screw” Britain’s service sector.
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Mr Gove has previously said that memorising a poem is to “own a great work of art forever”. Andrew Motion, the former Poet Laureate, wrote in the 
          <Text
            style={
              Object {
                "color": "#006699",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 17,
                "lineHeight": 26,
                "marginBottom": 25,
                "marginTop": 0,
                "textDecorationLine": "underline",
              }
            }
          >
            police disclosure of evidence
          </Text>
          <Text
            style={
              Object {
                "fontStyle": "italic",
              }
            }
          >
             Telegraph 
          </Text>
          last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
          <Text
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            When Thatcher joined the campaign trail for the 2001 general election...
          </Text>
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": "100%",
          }
        }
      >
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              This is video caption
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          <Text
            style={
              Object {
                "fontWeight": "bold",
              }
            }
          >
            Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
          </Text>
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "column",
            "paddingBottom": 25,
            "width": "100%",
          }
        }
      >
        <Video />
        <View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingTop": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#696969",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              This is video caption secondary
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          When Thatcher joined the campaign trail for the 2001 general election, she was followed closely by the media. After several minor strokes, however, it was announced in 2002 that she would cut back her heavy schedule. 
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 20,
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <View
          style={
            Object {
              "height": 0,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RCTWebView
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "flex": 1,
                  "height": 0,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Thatcher plainly admired the style and determination of Tony Blair, who crushed John Major’s Conservatives in the 1997 election, and he for his part seemed content from time to time to be compared with her as a strong leader. She regularly revisited some of the issues that had dominated her years in office; for example she gave strong support to the development of democracy and the protection of the rule of law in Hong Kong as promised in the treaty she had signed with China. In 1999, in her first conference speech since her resignation as leader, she defended General Augusto Pinochet, the former dictator of Chile, who was held in Britain after his arrest in 1998. 
        </Text>
      </View>
    </View>
    <View>
      <View>
        <ArticleImage />
      </View>
    </View>
    <View
      style={
        Object {
          "height": 0,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`3. an article with a video as the lead asset 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View>
        <Video />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <View
          style={
            Object {
              "marginBottom": -13.75,
              "marginTop": 10,
            }
          }
        >
          <VideoLabel />
        </View>
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`4. an article with no lead asset 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`5. an article with no headline falls back to use shortheadline 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Short Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`6. an article with ads 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <Ad
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderTopColor": "#DBDBDB",
            "borderTopWidth": 1,
            "marginBottom": 20,
            "paddingHorizontal": 10,
            "paddingVertical": 10,
          }
        }
      />
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`7. an article loading state 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexBasis": "100%",
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator />
</View>
`;

exports[`8. an article with updated byline 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;

exports[`8. an article with updated byline 2`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#1D1D1B",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 30,
              "fontWeight": "700",
              "lineHeight": 30,
              "marginBottom": 7,
              "marginTop": 15,
            }
          }
        >
          Some Headline
        </Text>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "marginBottom": 20,
            "marginLeft": 10,
            "marginRight": 10,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 9,
          }
        }
      >
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            <ArticleBylineWithLinks />
          </Text>
        </View>
        <View
          style={
            Object {
              "borderTopColor": "#DBDBDB",
              "borderTopWidth": 1,
              "paddingBottom": 4,
              "paddingTop": 9,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#696969",
                "fontFamily": "GillSansMTStd-Medium",
                "fontSize": 13,
                "lineHeight": 15,
              }
            }
          >
            Friday March 13 2015, 6:54pm, The Times
          </Text>
        </View>
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "paddingLeft": 10,
            "paddingRight": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 17,
              "lineHeight": 26,
              "marginBottom": 20,
            }
          }
        >
          Some content
        </Text>
      </View>
    </View>
    <View />
    <View>
      <ArticleComments />
    </View>
  </View>
</RCTScrollView>
`;
